# PROGETTO-FINALE-GHIDONI

./: CMakeLists.txt  README.txt  SPECIFICHE-PROGETTO.txt
buildAle/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ProgettoFinale.sln  ProgettoFinale.vcxproj  ProgettoFinale.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildAle/Debug/: logEsempio.txt
buildAle/ProgettoFinale.dir/Debug/: ProgettoFinale.exe.recipe  ProgettoFinale.ilk
buildAle/ProgettoFinale.dir/Debug/ProgettoFinale.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
buildAle/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildAle/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
buildAle/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
buildAle/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+1 more)
buildRic/: CMakeCache.txt  Makefile  cmake_install.cmake  log.txt  logEsempio.txt
include/: AutomaticDevice.h  AutomaticDevices.h  Console.h  CustomTime.h  Device.h  DeviceManager.h  Devices.h  ManualDevice.h  ManualDevices.h  OutputManager.h  OutputManager.hpp  Time.h  Utility.h
src/: AutomaticDevice.cpp  AutomaticDevices.cpp  Console.cpp  CustomTime.cpp  Device.cpp  DeviceManager.cpp  Devices.cpp  ManualDevice.cpp  ManualDevices.cpp  OutputManager.hpp  Time.cpp  Utility.cpp  log.txt  logEsempio.txt  logEsempio1.txt  logEsempio2.txt  main  main.cpp
